--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>My Portfolio - SANMATHI PRIYA K R</title>
+    <title>My Portfolio - Shariq Adnan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
